kubernetes/apps/default/dashboard/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: default
  annotations:
    lbipam.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: dashboard-kubernetes-dashboard-web
            port:
              number: 8000
        path: /
        pathType: Prefix
